...
                            .onAppear {
                                if ProcessInfo.processInfo.isPreview || ProcessInfo.processInfo.isRunningUITests {
                                    return
                                }
                                isTextFieldFocused = true
                            }
                            .accessibilityIdentifier("name")
                    }
                    HStack {
                        Text(verbatim: "URL")
                        textField("Required", text: $viewModel.urlString)
                            .modifier(KeyboardURLTypeModifier())
                            .accessibilityIdentifier("url")
#if os(iOS) || os(macOS)
                        playlistFilePickerButtonView()
#endif
                    }
                    HStack {
                        Text("Passcode")
...
                            .accessibilityIdentifier("passcode")
                    }
                }

                Section("Tags") {
                    HStack {
                        Text(verbatim: "tvg-logo")
                        textField("Optional", text: $viewModel.tvgLogo)
                            .modifier(KeyboardURLTypeModifier())
                            .accessibilityIdentifier("tvg-logo")
#if os(iOS) || os(macOS)
                        logoFilePickerButtonView()
#endif
                    }
                    HStack {
                        Text(verbatim: "url-tvg")
                        textField("Optional", text: $viewModel.urlTvg)
                            .modifier(KeyboardURLTypeModifier())
                            .accessibilityIdentifier("url-tvg")
                    }
                    HStack {
                        Text(verbatim: "url-img")
                        textField("Optional", text: $viewModel.urlImg)
                            .modifier(KeyboardURLTypeModifier())
                            .accessibilityIdentifier("url-img")
                    }
                }
            }
...
        Button {
            showFileImporter(for: .playlist)
        } label: {
            Image(systemName: "doc.badge.plus")
        }
        .buttonStyle(.bordered)
        .accessibilityIdentifier("playlist-file-picker")
    }

    private func logoFilePickerButtonView() -> some View {
        Button {
            showFileImporter(for: .logo)
        } label: {
            Image(systemName: "doc.badge.plus")
        }
        .buttonStyle(.bordered)
        .accessibilityIdentifier("tvg-logo-file-picker")
    }

    private func showFileImporter(for target: FileImportTarget) {
        fileImportTarget = target
        isFileImporterPresented = true
    }
...
}
#endif

private struct KeyboardURLTypeModifier: ViewModifier {

    func body(content: Content) -> some View {
        content
#if os(iOS)
            .keyboardType(.URL)
#endif
    }
}

...
