...
        case descending
        case mostViewed
        case recentViewed

        var title: String {
            switch self {
            case .none: return String(localized: "Default")
            case .ascending: return String(localized: "Alphabetical")
            case .descending: return String(localized: "Reverse Alphabetical")
            case .mostViewed: return String(localized: "Most Viewed")
            case .recentViewed: return String(localized: "Recently Viewed")
            }
        }
    }
...
